fixed converter tests, logback -> slf4j, method argument validation, test profile,