@@ -2,39 +2,39 @@ package com.lbapp.LBcalc.services;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.dataformat.xml.XmlMapper;
-import com.lbapp.LBcalc.LBcalc;
+import com.lbapp.LBcalc.Application;
 import com.lbapp.LBcalc.models.CcyAmt;
 import com.lbapp.LBcalc.models.CurrentFxRate;
 import com.lbapp.LBcalc.models.FxRate;
 import com.lbapp.LBcalc.models.HistoryFxRate;
 import com.lbapp.LBcalc.repos.CurrentFxRatesRepo;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.io.InputStream;
 import java.math.BigDecimal;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.math.RoundingMode;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.text.MessageFormat;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
+import static java.util.Objects.requireNonNull;
+
+@Slf4j
 @Service
 public class ForexService {
-    public static final Logger logger = LoggerFactory.getLogger(ForexService.class);
-
-    private final LBcalc.PropsConfig propsConfig;
+    private final Application.PropsConfig propsConfig;
 
     private final CurrentFxRatesRepo currentFxRatesRepo;
 
-    public ForexService(LBcalc.PropsConfig propsConfig, CurrentFxRatesRepo currentFxRatesRepo) {
+    public ForexService(Application.PropsConfig propsConfig, CurrentFxRatesRepo currentFxRatesRepo) {
         this.propsConfig = propsConfig;
         this.currentFxRatesRepo = currentFxRatesRepo;
     }
@@ -43,139 +43,157 @@ public class ForexService {
         return this.currentFxRatesRepo.findAll();
     }
 
+    // todo lock
     public void updateFxRates() {
-        URL url = propsConfig.getForex().get(0);
+        URI uri = propsConfig.getForex().get(0);
 
-        List<CurrentFxRate> allRates = getFxRates(url);
+        List<CurrentFxRate> freshRates = getFxRates(uri);
 
-        if (allRates.size() == 0) {
+        if (freshRates.isEmpty()) {
             return;
         }
 
-        List<CurrentFxRate> stored = this.currentFxRatesRepo.findAll();
+        List<CurrentFxRate> storedRates = this.currentFxRatesRepo.findAll();
 
         List<Integer> toDelete = new ArrayList<>();
         List<CurrentFxRate> toSave = new ArrayList<>();
-        for (CurrentFxRate cfx : allRates) {
-            Optional<CurrentFxRate> opt = stored.stream().filter(saved -> saved.getSymbol().equals(cfx.getSymbol())).findFirst();
-            if (!opt.isPresent()) {
-                toSave.add(cfx);
+        for (CurrentFxRate currentFxRate : freshRates) {
+            Optional<CurrentFxRate> rateFilteredBySymbolOptional = storedRates
+                    .stream()
+                    .filter(saved -> saved.getSymbol().equals(currentFxRate.getSymbol()))
+                    .findFirst();
+            if (rateFilteredBySymbolOptional.isEmpty()) {
+                toSave.add(currentFxRate);
             } else {
-                CurrentFxRate rateStored = opt.get();
-                if (!cfx.getValue().setScale(8, BigDecimal.ROUND_FLOOR).equals(rateStored.getValue())) {
-                    toSave.add(cfx);
+                CurrentFxRate rateStored = rateFilteredBySymbolOptional.get();
+                if (!currentFxRate.getValue().setScale(8, RoundingMode.FLOOR).equals(rateStored.getValue())) {
+                    toSave.add(currentFxRate);
                     toDelete.add(rateStored.getID());
                 }
             }
         }
 
-        if (toSave.size() > 0) {
-            List<CurrentFxRate> deleteList = stored.stream().filter(s -> toDelete.contains(s.getID())).collect(Collectors.toList());
+        if (!toSave.isEmpty()) {
+            List<CurrentFxRate> deleteList = storedRates
+                    .stream()
+                    .filter(s -> toDelete.contains(s.getID()))
+                    .toList();
             this.currentFxRatesRepo.deleteAll(deleteList);
 
-            toSave = toSave.stream().peek(x -> x.setValue(x.getValue().setScale(8, BigDecimal.ROUND_FLOOR))).collect(Collectors.toList());
-            this.currentFxRatesRepo.saveAll(toSave);
+            toSave = toSave
+                    .stream()
+                    .map(currentFxRate -> new CurrentFxRate(
+                            currentFxRate.getID(),
+                            currentFxRate.getSymbol(),
+                            currentFxRate.getValue().setScale(8, RoundingMode.FLOOR)
+                    ))
+                    .toList();
+            this.currentFxRatesRepo.saveAllAndFlush(toSave);
         }
     }
 
+    // todo currently can return single empty HistoricalRate
     public List<HistoryFxRate> getRatesHistory(String symbol, String dateFrom, String dateTo) {
-        URL url = propsConfig.getForex().get(1);
+        URI uri = propsConfig.getForex().get(1);
         try {
-            url = formatUrl(url, symbol, dateFrom, dateTo);
-        } catch (MalformedURLException e) {
-            return new ArrayList<>();
+            uri = formatUrl(uri, symbol, dateFrom, dateTo);
+        } catch (URISyntaxException e) {
+            return List.of();
         }
 
-//        return getFxRates(url);
+        List<FxRate> fxRates = getFxRatesFrom(uri);
 
-        InputStream inputStream = get(url);
-        List<FxRate> rates = parse(inputStream);
+        List<HistoryFxRate> mapped = fxRates.stream().map(fxRate -> {
+                    HistoryFxRate historicalRate = new HistoryFxRate();
 
-        List<HistoryFxRate> mapped = rates.stream().map(fx -> {
-            HistoryFxRate hfx = new HistoryFxRate();
+                    List<CcyAmt> currenciesAndAmounts = fxRate.getRates();
+                    if (currenciesAndAmounts.size() != 2) {
+                        return historicalRate;
+                    }
 
-            List<CcyAmt> currList = fx.getRates();
-            if (currList.size() != 2) {
-                return hfx;
-            }
+                    historicalRate.setDate(fxRate.getDate());
+                    historicalRate.setValue(currenciesAndAmounts.get(currenciesAndAmounts.size() - 1).getAmount());
 
-            hfx.setDate(fx.getDate());
-            hfx.setValue(currList.get(currList.size() - 1).getAmount());
-
-            return hfx;
-        })
-                .filter(hfx ->
-                (hfx.getDate() != null && hfx.getDate().length() > 0) &&
-                        (hfx.getValue() != null && hfx.getValue().compareTo(BigDecimal.ZERO) > 0)
-        ).collect(Collectors.toList());
+                    return historicalRate;
+                })
+                .filter(ratesHistory ->
+                        (ratesHistory.getDate() != null && !ratesHistory.getDate().isBlank()) &&
+                                (ratesHistory.getValue() != null && ratesHistory.getValue().compareTo(BigDecimal.ZERO) > 0)
+                ).toList();
 
         return mapped;
     }
 
-    private List<CurrentFxRate> getFxRates(URL url) {
-        InputStream inputStream = get(url);
-        List<FxRate> rates = parse(inputStream);
+    private URI formatUrl(URI uri, String symbol, String dateFrom, String dateTo) throws URISyntaxException {
+        String urlStr = uri.toString();
+        urlStr = MessageFormat.format(urlStr, symbol, dateFrom, dateTo);
+        return new URI(urlStr);
+    }
+
+    // todo currently can return single empty CurrentFxRate
+    private List<CurrentFxRate> getFxRates(URI uri) {
+        List<FxRate> rates = getFxRatesFrom(uri);
 
         List<CurrentFxRate> mapped = rates.stream().map(fx -> {
-            CurrentFxRate cfx = new CurrentFxRate();
+                    CurrentFxRate cfx = new CurrentFxRate();
 
-            List<CcyAmt> currList = fx.getRates();
-            if (currList.size() != 2) {
-                return cfx;
-            }
+                    List<CcyAmt> currList = fx.getRates();
+                    if (currList.size() != 2) {
+                        return cfx;
+                    }
 
-            String symbol = currList.stream().map(CcyAmt::getCurrency).collect(Collectors.joining());
-            cfx.setSymbol(symbol);
+                    String symbol = currList.stream().map(CcyAmt::getCurrency).collect(Collectors.joining());
+                    cfx.setSymbol(symbol);
 
-            cfx.setValue(currList.get(currList.size() - 1).getAmount());
+                    cfx.setValue(currList.get(currList.size() - 1).getAmount());
 
-            return cfx;
-        })
+                    return cfx;
+                })
                 .filter(cfx ->
                         (cfx.getSymbol() != null && cfx.getSymbol().length() > 0) &&
                                 (cfx.getValue() != null && cfx.getValue().compareTo(BigDecimal.ZERO) > 0)
                 ).collect(Collectors.toList());
 
         if (rates.size() == 0 || mapped.size() == 0) {
-            return new ArrayList<>();
+            return List.of();
         }
 
         return mapped;
     }
 
-    private URL formatUrl(URL url, String symbol, String dateFrom, String dateTo) throws MalformedURLException {
-        String urlStr = url.toString();
-        urlStr = MessageFormat.format(urlStr, symbol, dateFrom, dateTo);
-        return new URL(urlStr);
+    private List<FxRate> getFxRatesFrom(URI uri) {
+        InputStream inputStream = getFrom(uri);
+        return parseFxRatesFrom(inputStream);
     }
 
-    private InputStream get(URL url) {
+    private InputStream getFrom(URI uri) {
+        requireNonNull(uri, "Uri can not be null");
         InputStream inputStream = null;
         try {
-//            String content = EntityUtils.toString(response.getEntity(), StandardCharsets.UTF_8); // use to get LB errors
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(url.toURI())
+            HttpRequest request = HttpRequest
+                    .newBuilder()
+                    .uri(uri)
                     .setHeader("Content-type", "application/xml")
                     .GET()
                     .build();
 
-//            int code = response.getStatusLine().getStatusCode();
-            HttpResponse<InputStream> response = HttpClient.newBuilder().build().send(request, HttpResponse.BodyHandlers.ofInputStream());
+            HttpResponse<InputStream> response = HttpClient
+                    .newBuilder()
+                    .build()
+                    .send(request, HttpResponse.BodyHandlers.ofInputStream());
             inputStream = response.body();
-        } catch (Exception e) {
-            logger.error(Arrays.toString(e.getStackTrace()));
+        } catch (Exception ignored) {
         }
         return inputStream;
     }
 
-    private List<FxRate> parse(InputStream inputStream) {
+    private List<FxRate> parseFxRatesFrom(InputStream inputStream) {
+        requireNonNull(inputStream, "InputStream of fx rates can not be null");
         try {
-            XmlMapper xmlMapper = new XmlMapper();
-
-            return xmlMapper.readValue(inputStream, new TypeReference<List<FxRate>>() {});
-        } catch (Exception e) {
-            logger.error(Arrays.toString(e.getStackTrace()));
+            return new XmlMapper().readValue(inputStream, new TypeReference<List<FxRate>>() {
+            });
+        } catch (Exception ignored) {
         }
-        return new ArrayList<FxRate>();
+        return List.of();
     }
 }
